put some words in the page

--- a/index.html
+++ b/index.html
@@ -46,28 +46,28 @@
 
                 <h3 class="content-subhead">
                     <i class="fa fa-rocket"></i>
-                    Get Started Quickly
+                    React.js talk
                 </h3>
                 <p>
-                    Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.
+                    A talk on react.js I presented at WDCNZ
                 </p>
             </div>
             <div class="l-box kev-u-1 kev-u-md-1-2 kev-u-lg-1-4">
                 <h3 class="content-subhead">
                     <i class="fa fa-mobile"></i>
-                    Responsive Layouts
+                    Test your javascript
                 </h3>
                 <p>
-                    Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.
+                    Slides on unit testing JavaScript from a recent talk
                 </p>
             </div>
             <div class="l-box kev-u-1 kev-u-md-1-2 kev-u-lg-1-4">
                 <h3 class="content-subhead">
                     <i class="fa fa-th-large"></i>
-                    Modular
+                    File, New, Problem
                 </h3>
                 <p>
-                    Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.
+                    Slides on the considerations for front end design before you get started.
                 </p>
             </div>
             <div class="l-box kev-u-1 kev-u-md-1-2 kev-u-lg-1-4">
@@ -76,28 +76,13 @@
                     Plays Nice
                 </h3>
                 <p>
-                    Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.
+                    Well not really, I have strong (and loud) opinions.
                 </p>
             </div>
         </div>
     </div>
 
-    <div class="ribbon l-box-lrg kev-g">
-        <div class="l-box-lrg is-center kev-u-1 kev-u-md-1-2 kev-u-lg-2-5">
-            <img class="kev-img-responsive" alt="File Icons" width="300" src="/img/common/file-icons.png">
-        </div>
-        <div class="kev-u-1 kev-u-md-1-2 kev-u-lg-3-5">
-
-            <h2 class="content-head content-head-ribbon">Laboris nisi ut aliquip.</h2>
-
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis aute irure dolor.
-            </p>
-        </div>
-    </div>
+ 
 
     <div class="content">
         <h2 class="content-head is-center">Dolore magna aliqua. Uis aute irure.</h2>
@@ -142,7 +127,7 @@
     </div>
 
     <div class="footer l-box is-center">
-        View the source of this layout to learn more. Made with love by the YUI Team.
+        Thanks to <a href="http://purecss.io">PureCSS</a> for the layout and styles
     </div>
 
 </div>
