--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     React.js talk
                 </h3>
                 <p>
-                    A talk on react.js I presented at WDCNZ
+                    The <a href="http://vimeo.com/104556279">video</a> of the talk on react.js I presented at <a href="http://wdcnz.com/">WDCNZ</a>
                 </p>
             </div>
             <div class="l-box kev-u-1 kev-u-md-1-2 kev-u-lg-1-4">
@@ -58,7 +58,7 @@
                     Test your javascript
                 </h3>
                 <p>
-                    Slides on unit testing JavaScript from a recent talk
+                    <a href="http://kevnz.github.io/testing-js/">Slides</a> on unit testing JavaScript from a recent talk
                 </p>
             </div>
             <div class="l-box kev-u-1 kev-u-md-1-2 kev-u-lg-1-4">
@@ -67,7 +67,7 @@
                     File, New, Problem
                 </h3>
                 <p>
-                    Slides on the considerations for front end design before you get started.
+                    <a href="http://kevnz.github.io/file-new-problem/">Slides</a> on the considerations for front end design before you get started.
                 </p>
             </div>
             <div class="l-box kev-u-1 kev-u-md-1-2 kev-u-lg-1-4">
