--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
         <ul>
             <li class="kev-menu-selected"><a href="#">Home</a></li>
-            <li><a href="#">Github</a></li>
-            <li><a href="#">Twitter</a></li>
+            <li><a href="https://www.github.com/Kevnz">Github</a></li>
+            <li><a href="https://www.twitter.com/kev_nz">Twitter</a></li>
         </ul>
     </div>
 </div>
@@ -32,16 +32,26 @@
             Web Developer.
         </p>
         <p>
-            <a href="http://github.com/kevnz" class="kev-button kev-button-primary">My Code</a>
+            <a href="https://github.com/kevnz" class="kev-button kev-button-primary">My Code</a>
         </p>
     </div>
 </div>
 
 <div class="content-wrapper">
     <div class="content">
-        <h2 class="content-head is-center">Code and Talks</h2>
+        <h2 class="content-head is-center">Talks</h2>
 
         <div class="kev-g">
+            <div class="l-box kev-u-1 kev-u-md-1-2 kev-u-lg-1-4">
+
+                <h3 class="content-subhead">
+                    <i class="fa fa-rocket"></i>
+                    React.js on the server
+                </h3>
+                <p>
+                    An introduction to creating React based apps that render on both the client and the server
+                </p>
+            </div>
             <div class="l-box kev-u-1 kev-u-md-1-2 kev-u-lg-1-4">
 
                 <h3 class="content-subhead">
@@ -76,7 +86,7 @@
                     Plays Nice
                 </h3>
                 <p>
-                    Well not really, I have strong (and loud) opinions.
+                    Truly, I have strong (and loud) opinions, but happy to admit when I'm wrong.
                 </p>
             </div>
         </div>
@@ -91,9 +101,5 @@
     </div>
 
 </div>
-
- 
- 
- 
 </body>
 </html>
