links to slides and code for recent talks

--- a/index.html
+++ b/index.html
@@ -46,10 +46,20 @@
 
                 <h3 class="content-subhead">
                     <i class="fa fa-rocket"></i>
+                    NPM for CSS
+                </h3>
+                <p>
+                    An introduction to using NPM and node.js for CSS. <a href="http://kevnz.github.io/npm-css/">Slides</a> and <a href="https://github.com/Kevnz/npm-css-sample">Code</a>
+                </p>
+            </div>
+            <div class="l-box kev-u-1 kev-u-md-1-2 kev-u-lg-1-4">
+
+                <h3 class="content-subhead">
+                    <i class="fa fa-rocket"></i>
                     React.js on the server
                 </h3>
                 <p>
-                    An introduction to creating React based apps that render on both the client and the server
+                    An introduction to creating React based apps that render on both the client and the server. <a href="http://kevnz.github.io/serversidereact/">Slides</a> and <a href="https://github.com/Kevnz/ss-react-node">Code</a>
                 </p>
             </div>
             <div class="l-box kev-u-1 kev-u-md-1-2 kev-u-lg-1-4">
