--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="l-box kev-u-1 kev-u-md-1-2 kev-u-lg-1-4">
 
                 <h3 class="content-subhead">
-                    <i class="fa fa-rocket"></i>
+                    <i class="fa fa-plug"></i>
                     NPM for CSS
                 </h3>
                 <p>
@@ -65,7 +65,7 @@
             <div class="l-box kev-u-1 kev-u-md-1-2 kev-u-lg-1-4">
 
                 <h3 class="content-subhead">
-                    <i class="fa fa-rocket"></i>
+                    <i class="fa fa-bolt"></i>
                     React.js talk
                 </h3>
                 <p>
