--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             Web Developer.
         </p>
         <p>
-            <a href="https://github.com/kevnz" class="kev-button kev-button-primary">My Code</a>
+            <a href="https://github.com/kevnz" class="kev-button kev-button-primary">My <i class="fa fa-github fa-lg"></i> Code</a>
         </p>
     </div>
 </div>
