--- a/index.html
+++ b/index.html
@@ -46,10 +46,20 @@
 
                 <h3 class="content-subhead">
                     <i class="fa fa-plug"></i>
+                    Where is JavaScript Going?
+                </h3>
+                <p>
+                    A brief look into where I believe JavaScript is heading over the next year or so. <a href="http://kevinisom.info/js-trends-2015/">Slides</a>
+                </p>
+            </div>
+            <div class="l-box kev-u-1 kev-u-md-1-2 kev-u-lg-1-4">
+
+                <h3 class="content-subhead">
+                    <i class="fa fa-plug"></i>
                     NPM for CSS
                 </h3>
                 <p>
-                    An introduction to using NPM and node.js for CSS. <a href="http://kevnz.github.io/npm-css/">Slides</a> and <a href="https://github.com/Kevnz/npm-css-sample">Code</a>
+                    An introduction to using NPM and node.js for CSS. <a href="kevinisom.info/npm-css/">Slides</a> and <a href="https://github.com/Kevnz/npm-css-sample">Code</a>
                 </p>
             </div>
             <div class="l-box kev-u-1 kev-u-md-1-2 kev-u-lg-1-4">
@@ -59,7 +69,7 @@
                     React.js on the server
                 </h3>
                 <p>
-                    An introduction to creating React based apps that render on both the client and the server. <a href="http://kevnz.github.io/serversidereact/">Slides</a> and <a href="https://github.com/Kevnz/ss-react-node">Code</a>
+                    An introduction to creating React based apps that render on both the client and the server. <a href="http://kevinisom.info/serversidereact/">Slides</a> and <a href="https://github.com/Kevnz/ss-react-node">Code</a>
                 </p>
             </div>
             <div class="l-box kev-u-1 kev-u-md-1-2 kev-u-lg-1-4">
@@ -78,7 +88,7 @@
                     Test your javascript
                 </h3>
                 <p>
-                    <a href="http://kevnz.github.io/testing-js/">Slides</a> on unit testing JavaScript from a recent talk
+                    <a href="http://kevinisom.info/testing-js/">Slides</a> on unit testing JavaScript from a recent talk
                 </p>
             </div>
             <div class="l-box kev-u-1 kev-u-md-1-2 kev-u-lg-1-4">
@@ -101,7 +111,97 @@
             </div>
         </div>
     </div>
+    <div class="content">
+        <h2 class="content-head is-center">NPM Packages</h2>
 
+        <div class="kev-g">
+            <div class="l-box kev-u-1 kev-u-md-1-2 kev-u-lg-1-4">
+
+                <h3 class="content-subhead">
+                    <i class="fa fa-chain-broken"></i>
+                    <a href="https://www.npmjs.com/package/back-off">Back Off</a>
+                </h3>
+                <p>
+                    The <a href="http://martinfowler.com/bliki/CircuitBreaker.html">Circuit Breaker</a> pattern for in JavaScript
+                </p>
+            </div>
+            <div class="l-box kev-u-1 kev-u-md-1-2 kev-u-lg-1-4">
+
+                <h3 class="content-subhead">
+                    <i class="fa fa-floppy-o"></i>
+                    <a href="https://www.npmjs.com/package/express-mongo-session">Express Mongo Session</a>
+                </h3>
+                <p>
+                    An express middleware module that allows you to save a session to mongodb.
+                </p>
+            </div>
+            <div class="l-box kev-u-1 kev-u-md-1-2 kev-u-lg-1-4">
+
+                <h3 class="content-subhead">
+                    <i class="fa fa-rocket"></i>
+                    <a href="https://www.npmjs.com/package/fuxor">Fuxor</a>
+                </h3>
+                <p>
+                    A simple dependency injection module for node.js
+                </p>
+            </div>
+            <div class="l-box kev-u-1 kev-u-md-1-2 kev-u-lg-1-4">
+
+                <h3 class="content-subhead">
+                    <i class="fa fa-plug"></i>
+                    <a href="https://www.npmjs.com/package/mongo-start">Mongo Start</a>
+                </h3>
+                <p>
+                    Bootstrapper to easily use MongoJS
+                </p>
+            </div>
+            <div class="l-box kev-u-1 kev-u-md-1-2 kev-u-lg-1-4">
+                <h3 class="content-subhead">
+                    <i class="fa fa-cloud-upload"></i>
+                    <a href="https://www.npmjs.com/package/mongo-loader">Mongo Loader</a>
+                </h3>
+                <p>
+                    Quickly and easily load date into a MongoDB instance and remove it when done.
+                </p>
+            </div>
+            <div class="l-box kev-u-1 kev-u-md-1-2 kev-u-lg-1-4">
+                <h3 class="content-subhead">
+                    <i class="fa fa-money"></i>
+                    <a href="">PxPay</a>
+                </h3>
+                <p>
+                    A node module for using the Payment Express PXPay 2.0 service for payment processing.
+                </p>
+            </div>
+            <div class="l-box kev-u-1 kev-u-md-1-2 kev-u-lg-1-4">
+                <h3 class="content-subhead">
+                    <i class="fa fa-usd"></i>
+                    <a href="https://www.npmjs.com/package/pxpost">PxPost</a>
+                </h3>
+                <p>
+                    A node module for using the Payment Express PXPost service for payment processing.
+                </p>
+            </div>
+            <div class="l-box kev-u-1 kev-u-md-1-2 kev-u-lg-1-4">
+                <h3 class="content-subhead">
+                    <i class="fa fa-puzzle-piece"></i>
+                    <a href="https://www.npmjs.com/package/react-form-elements">React Form Elements</a>
+                </h3>
+                <p>
+                    Form components for React.js.
+                </p>
+            </div>
+            <div class="l-box kev-u-1 kev-u-md-1-2 kev-u-lg-1-4">
+                <h3 class="content-subhead">
+                    <i class="fa fa-puzzle-piece"></i>
+                    <a href="https://www.npmjs.com/package/static-cling">Static Cling</a>
+                </h3>
+                <p>
+                    Static file server for Node.js and IO.js.
+                </p>
+            </div>
+        </div>
+    </div>
  
 
  
