--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta charset="utf-8">
 
   <title>Kevin Isom - Developer</title>
-  <meta name="description" content="Kevnz">
+  <meta name="description" content="Kevin Isom - Web Developer">
   <meta name="author" content="Kevin Isom">
 
-  <link rel="stylesheet" href="/css/style.css?v=1.0"> 
+  <link rel="stylesheet" href="/css/style.css?v=1.1"> 
   <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.css">
 </head>
 
@@ -211,5 +211,15 @@
     </div>
 
 </div>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-1847639-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </body>
 </html>
