--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Kevin Isom - Developer</title>
   <meta name="description" content="Kevin Isom - Web Developer">
   <meta name="author" content="Kevin Isom">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/css/style.css?v=1.1"> 
   <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.css">
 </head>
