opengraph and twitter

--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
 <!doctype html>
 
-<html lang="en">
+<html lang="en" prefix="og: http://ogp.me/ns#">
 <head>
   <meta charset="utf-8">
 
   <title>Kevin Isom - Developer</title>
-  <meta name="description" content="Kevin Isom - Web Developer">
+  <meta name="description" content="Kevin Isom - Developer">
   <meta name="author" content="Kevin Isom">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta property="og:title" content="Kevin Isom" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="http://kevinisom.info/" />
+  <meta property="og:image" content="http://kevinisom.info/img/website.png" />
+  <meta property="og:image:secure_url" content="https://kevinisom.info/img/website.png" />
+  <meta property="og:image:type" content="image/png" />
+  <meta property="og:image:width" content="1189" />
+  <meta property="og:image:height" content="533" />
+  <meta property="og:image:alt" content="kevinisom.info web page" />
+
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@kev_nz" />
+  <meta name="twitter:title" content="Kevin Isom - Developer" />
+  <meta name="twitter:description" content="Find out more about Kevin Isom, an experienced Developer living in New Zealand but working all over the world" />
+  <meta name="twitter:image" content="https://kevinisom.info/img/website.png" />
+
   <link rel="stylesheet" href="/css/style.css?v=1.1"> 
   <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.css">
 </head>
