--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta property="og:title" content="Kevin Isom" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="http://kevinisom.info/" />
-  <meta property="og:image" content="http://kevinisom.info/img/website.png" />
+  <meta property="og:description" content="Find out more about Kevin Isom, an experienced developer living in New Zealand but working all over the world" />
+  <meta property="og:url" content="https://kevinisom.info/" />
+  <meta property="og:image" content="https://kevinisom.info/img/website.png" />
   <meta property="og:image:secure_url" content="https://kevinisom.info/img/website.png" />
   <meta property="og:image:type" content="image/png" />
   <meta property="og:image:width" content="1189" />
@@ -21,7 +22,7 @@
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@kev_nz" />
   <meta name="twitter:title" content="Kevin Isom - Developer" />
-  <meta name="twitter:description" content="Find out more about Kevin Isom, an experienced Developer living in New Zealand but working all over the world" />
+  <meta name="twitter:description" content="Find out more about Kevin Isom, an experienced developer living in New Zealand but working all over the world" />
   <meta name="twitter:image" content="https://kevinisom.info/img/website.png" />
 
   <link rel="stylesheet" href="/css/style.css?v=1.1"> 
