icons and manifest

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
   <link rel="stylesheet" href="/css/style.css?v=1.1"> 
   <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.css">
+  <link rel="manifest" href="manifest.json">
 </head>
 
 <body>
